fixing vertical spacing of title on home page

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -4,10 +4,16 @@
   background-color: rgba(255,255,255,0.34);
   border-radius: 50%;
   margin: auto;
+  position: relative;
   /*Flex*/
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+.home-page-logo {
+  position: absolute;
+  bottom: 82%;
+  left: 50%;
 }
 .home-page-image {
   height: 275px;
